Atualizações de contato

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -5,29 +5,40 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-  <ion-card>
-  <img src="../assets/imgs/fotoBacana.jpg" />
-  <ion-card-content>
-    <ion-card-title>
-      Willians Augusto      
-    </ion-card-title>
-    <p>
-      (13) 99716-11619
-    </p>
-  </ion-card-content>
-</ion-card>
 
 <ion-content>
-<ion-list>
-    <ion-list-header>Envie um email</ion-list-header>
-    <ion-item>
-      <a href="mailto:wiliansaugusto@gmail.com" target="_top">email</a><br>
+<ion-list padding>
+<ion-card>
+  <div>
+  <h2 style="text-align: center;">Desenvolvido por</h2>
+  <img style="position:relative; left: 25%;width: 50%; border: 2px ;border-top-left-radius: 50px 20px;" src="../assets/imgs/willians_samu.jpeg" />
+     <h2 style="text-align: center;"> Willians Augusto </h2>      
+    <p style="position:inherit; text-align: center;">
+      (13) 99716-11619
+    </p><br>
+    </div>
+</ion-card>
+<ion-card  >
+  <ion-item  >
+  <div >
+    <h2 style="text-align: center;">Envie um email</h2>
+     <a  href="mailto:wiliansaugusto@gmail.com" target="_top">
+      <img style="width: 40%; position:relative; left: 25%;top:15px;"src="../assets/imgs/email.png">
+     </a><br>
+        </div>
     </ion-item>
-    <ion-list-header>Nossas Redes Sociais</ion-list-header>
-    <ion-item>
-      <a href="https://github.com/wiliansaugusto" target="_top" >GitHub</a><br>
-      <a href="https://www.linkedin.com/in/willians-tadeu-atanázio-augusto-629791b0/" target="_top">Linkedin</a>
+</ion-card>
+<ion-card padding>
+  <ion-item style="text-align: center;"> <h2>Siga Nossas Redes Sociais</h2></ion-item>
+    <ion-item style="width: 50%; position:relative; left: 25%;top:15px;bottom: 10px;">
+      
+      <a href="https://github.com/wiliansaugusto" target="_blank" >
+        <img src="../assets/imgs/github.png">
+      </a>
+      <a href="https://www.linkedin.com/in/willians-tadeu-atanázio-augusto-629791b0/" target="_blank">
+        <img src="../assets/imgs/linkedin.png">
+      </a>
     </ion-item>
-    
-  </ion-list>
+  </ion-card>
+ </ion-list>
 </ion-content>
