--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -16,6 +16,8 @@
     <p style="position:inherit; text-align: center;">
       (13) 99716-11619
     </p><br>
+    <h2 style="text-align: center;">Desenvolvido com IONIC 3</h2><br>
+    <img style="width: 40%; position:relative; left: 25%;" src="../assets/imgs/ionic.png"><br>
     </div>
 </ion-card>
 <ion-card  >
@@ -23,7 +25,7 @@
   <div >
     <h2 style="text-align: center;">Envie um email</h2>
      <a  href="mailto:wiliansaugusto@gmail.com" target="_top">
-      <img style="width: 40%; position:relative; left: 25%;top:15px;"src="../assets/imgs/email.png">
+      <img style="width: 30%; position:relative; left: 35%;top:15px;"src="../assets/imgs/email.png">
      </a><br>
         </div>
     </ion-item>
