--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 
 <ion-header>
   <ion-navbar>
-    <ion-title>Chek listngng</ion-title>
+    <ion-title>Chek list</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -9,9 +9,7 @@
 	<ion-card>
 
   <h2>Realizar Checklist </h2>
-	<p>teste</p>  
- <h1>{{teste}}</h1>
-
+<button ion-button color="dark" round (click)="criarFormulario()";> Checklist </button>
  
 </ion-card>
 </ion-content>
